# main.go
@@ -15,6 +15,9 @@ import (
 	ChatbotController "greenenvironment/features/chatbot/controller"
 	ChatbotRepository "greenenvironment/features/chatbot/repository"
 	ChatbotService "greenenvironment/features/chatbot/service"
+	DashboardController "greenenvironment/features/dashboard/controller"
+	DashboardRepository "greenenvironment/features/dashboard/repository"
+	DashboardService "greenenvironment/features/dashboard/service"
 	ForumController "greenenvironment/features/forum/controller"
 	ForumRepository "greenenvironment/features/forum/repository"
 	ForumService "greenenvironment/features/forum/service"
@@ -143,6 +146,10 @@ func main() {
 	challengeService := ChallengeService.NewChallengeService(challengeRepo, impactRepo)
 	challengeController := ChallengeController.NewChallengeController(challengeService, jwt, storage)
 
+	dashboardRepo := DashboardRepository.NewDashboardRepository(db)
+	dashboardService := DashboardService.NewDashboardService(dashboardRepo)
+	dashboardController := DashboardController.NewDashboardController(dashboardService, jwt)
+
 	c := cron.New()
 	c.AddFunc("@daily", func() {
 		log.Println("Updating challenge and task statuses...")
@@ -167,6 +174,7 @@ func main() {
 	routes.RouteChatbot(e, chatbotController, *cfg)
 	routes.RouteForum(e, forumController, *cfg)
 	routes.RouteChallenge(e, challengeController, *cfg)
+	routes.RouteDashboard(e, dashboardController, *cfg)
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 	e.Logger.Fatal(e.Start(cfg.APP_PORT))
